<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="bluetooth">蓝牙</string>
    <string name="cancel">取消</string>
    <string name="douban">豆瓣</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">邮件</string>
    <string name="evernote">印象笔记</string>
    <string name="facebook">Facebook</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="finish">完成</string>
    <string name="flickr">Flickr</string>
    <string name="foursquare">FourSquare</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapaper_pwd">密码</string>
    <string name="kaixin">开心网</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="line">Line</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="linkedin">领英</string>
    <string name="list_friends">%s的朋友</string>
    <string name="mingdao">明道</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="multi_share">图文分享</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="pinterest">Pinterest</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="pocket">Pocket</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="qq">QQ</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qzone">QQ空间</string>
    <string name="refreshing">刷新中…</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="renren">人人网</string>
    <string name="select_a_friend">请选择一个朋友</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="share">分享</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_completed">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_to">分享到</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="shortmessage">信息</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitter">Twitter</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <string name="vkontakte">VK</string>
    <string name="website">http://www.mob.com</string>
    <string name="wechat">微信好友</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="yixin">易信</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="youdao">有道云笔记</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="app_init_message" formatted="false">首次打开应用，正在加载模块中…%n%</string>
    <string name="app_name"> 追书神器 </string>
    <string name="bad_tf_card_state">Bad TF Card State!</string>
    <string name="copy_right">Copyright © 2015 Maxthon. All rights reserved.</string>
    <string name="game_center">游戏中心</string>
    <string name="game_not_found">Game Not Found!</string>
    <string name="game_not_found_for_shortcut">Game Not Found!</string>
    <string name="init_failure_message">应用初始化失败，请保证您的网络畅通！</string>
    <string name="loading">载入中…</string>
    <string name="no_network_connection">Please connect the network and try again!</string>
    <string name="once_more_to_exit">Press once more to exit</string>
    <string name="once_more_to_exit_online">Press once more to exit</string>
    <string name="shortcut_gamecenter_addgame_title">More</string>
    <string name="shortcut_gamecenter_title">Free</string>
    <string name="storage_permission">Make Directoy Permission Denied!</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_contact_info_hint">Email, msn, gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_contact_title">Contact</string>
    <string name="umeng_fb_contact_update_at">Updated at</string>
    <string name="charge_help_a1">追书币是追书神器的虚拟货币，可以用来购买额外git的功能，享受追书神器提供的更加优质的服务。</string>
    <string name="charge_help_a2">追书币可以通过充值的方式获取，支持支付宝、微信和短信等多种充值渠道。</string>
    <string name="charge_help_a3">追书券是一种虚拟优惠券，有一定的有效期。在有效期内，追书劵可以等同于追书币使用，最终解释权归追书神器所有。</string>
    <string name="charge_help_a4">追书券可以通过活动、促销等方式获取，请关注活动信息。</string>
    <string name="charge_help_a5">正常情况下，充值的追书币将即刻到账，最迟不超过24小时。如未及时到账，可以关注“追书神器”官方微信公众号，联系客服为您处理。</string>
    <string name="charge_help_a6">如果发现购买时所花费的追书币和预期不符，或有其他消费方面的问题，可以关注“追书神器”官方微信公众号，联系客服为您处理。</string>
    <string name="charge_help_q1">什么是追书币？</string>
    <string name="charge_help_q2">如何获取追书币？</string>
    <string name="charge_help_q3">什么是追书券？</string>
    <string name="charge_help_q4">如何获取追书券？</string>
    <string name="charge_help_q5">充值没有到账？</string>
    <string name="charge_help_q6">购买记录有问题？</string>
    <string name="feed_chapter_count10">养肥 10 章</string>
    <string name="feed_chapter_count100">养肥 100 章</string>
    <string name="feed_chapter_count20">养肥 20 章</string>
    <string name="feed_chapter_count200">养肥 200 章</string>
    <string name="feed_chapter_count50">养肥 50 章</string>
    <string name="post_sort_create">最新发布</string>
    <string name="post_sort_reply_count">最多评论</string>
    <string name="post_sort_update_default">默认排序</string>
    <string name="post_sort_useful">最有用的</string>
    <string name="share_immediately">立即分享</string>
    <string name="share_remove_ad_1">1.将自己的专属链接分享出去,你的小伙伴下载并成功安装追书神器,你便可获得7天免广告特权</string>
    <string name="share_remove_ad_2">2.你的朋友只有通过你分享的专属链接下载，成功安装才有效哟</string>
    <string name="share_remove_ad_3">3.如果有多个好友下载并成功安装追书神器，则去除广告天数相应进行累加</string>
    <string name="share_remove_ad_4">4.如期间遇到问题,可关注\"追书神器\"微信公众号,并将问题反馈给我们,我们会及时进行处理</string>
    <string name="share_remove_ad_title">分享规则</string>
    <string name="tts_speech_exit">退出朗读</string>
    <string name="tts_speech_speed">语速：</string>
    <string name="tts_speech_speed_fast">快</string>
    <string name="tts_speech_speed_slow">慢</string>
    <string name="tts_speech_time">定时：</string>
    <string name="tts_speech_time_15">15分钟</string>
    <string name="tts_speech_time_30">30分钟</string>
    <string name="tts_speech_time_5">5分钟</string>
    <string name="tts_speech_time_60">60分钟</string>
    <string name="tts_speech_voice">发音：</string>
    <string name="tts_speech_voice_more">+更多</string>
    <string name="type_cyjk">穿越架空</string>
    <string name="type_dmtr">耽美同人</string>
    <string name="type_dsyn">都市异能</string>
    <string name="type_gdyq">古代言情</string>
    <string name="type_hmzc">豪门总裁</string>
    <string name="type_hxyq">幻想言情</string>
    <string name="type_khly">科幻灵异</string>
    <string name="type_lsjs">历史军事</string>
    <string name="type_wxxx">武侠仙侠</string>
    <string name="type_xdyq">现代言情</string>
    <string name="type_xhqh">玄幻奇幻</string>
    <string name="type_yxjj">游戏竞技</string>
</resources>