<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="-40.0dip"
              android:layout_marginTop="@dimen/dp_24"
              android:orientation="vertical">

    <RadioGroup
        android:id="@id/feed_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30">

        <RadioButton
            android:id="@id/feed_chapter_10"
            style="@style/MyRadioButton"
            android:text="@string/feed_chapter_count10"/>

        <RadioButton
            android:id="@id/feed_chapter_20"
            style="@style/MyRadioButton"
            android:text="@string/feed_chapter_count20"/>

        <RadioButton
            android:id="@id/feed_chapter_50"
            style="@style/MyRadioButton"
            android:text="@string/feed_chapter_count50"/>

        <RadioButton
            android:id="@id/feed_chapter_100"
            style="@style/MyRadioButton"
            android:text="@string/feed_chapter_count100"/>

        <RadioButton
            android:id="@id/feed_chapter_200"
            style="@style/MyRadioButton"
            android:text="@string/feed_chapter_count200"/>
    </RadioGroup>
</LinearLayout>