<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/book_topic_popup_bg"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/book_review_pop_height">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@id/text_item0"
                style="@style/Post_List_PopupWindow_Item"
                android:text="全部类别"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item1"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_xhqh"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item2"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_wxxx"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item3"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_dsyn"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item4"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_lsjs"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item5"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_yxjj"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item6"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_khly"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item7"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_cyjk"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item8"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_hmzc"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item9"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_xdyq"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item10"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_gdyq"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item11"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_hxyq"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>

            <TextView
                android:id="@id/text_item12"
                style="@style/Post_List_PopupWindow_Item"
                android:text="@string/type_dmtr"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="?lineColor"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>