<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="?android:windowBackground"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_28"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q1"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a1"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q2"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a2"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q3"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a3"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q4"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a4"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q5"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a5"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_q6"
            android:textColor="?android:textColor"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_28"
            android:layout_marginTop="@dimen/dp_6"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/charge_help_a6"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_12"/>
    </LinearLayout>
</ScrollView>