<?xml version="1.0" encoding="utf-8"?>
<com.clilystudio.netbook.reader.ReaderTtsSetWidget android:orientation="vertical" android:background="@color/reader_setting_bg" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_8" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:minHeight="@dimen/dp_56">
            <TextView android:text="@string/tts_speech_speed" style="@style/Style_Reader_TTS_title" />
            <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textColor="@color/bg_dark" android:id="@id/slow_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_24" android:text="@string/tts_speech_speed_slow" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <SeekBar android:id="@id/tts_voice_speed" android:paddingLeft="@dimen/dp_16" android:paddingRight="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" android:progress="50" android:progressDrawable="@drawable/seek_bar" android:thumb="@drawable/seek_bar_thumb" android:thumbOffset="@dimen/dp_12" android:layout_toLeftOf="@id/fast_text" android:layout_toRightOf="@id/slow_text" android:layout_centerVertical="true" />
                <TextView android:textColor="@color/bg_dark" android:id="@id/fast_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dp_8" android:text="@string/tts_speech_speed_fast" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </TableRow>
        <TableRow android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:minHeight="@dimen/dp_56">
            <TextView android:text="@string/tts_speech_voice" style="@style/Style_Reader_TTS_title" />
            <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_weight="1.0">
                <TextView android:id="@id/tts_voice1" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_voice2" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_voice3" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_voice_more" android:text="@string/tts_speech_voice_more" style="@style/Style_Reader_TTS_Voice_More" />
            </LinearLayout>
        </TableRow>
        <TableRow android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:minHeight="@dimen/dp_56">
            <TextView android:text="@string/tts_speech_time" style="@style/Style_Reader_TTS_title" />
            <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_16" android:layout_weight="1.0">
                <TextView android:id="@id/tts_time1" android:text="@string/tts_speech_time_5" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_time2" android:text="@string/tts_speech_time_15" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_time3" android:text="@string/tts_speech_time_30" style="@style/Style_Reader_TTS_Option" />
                <TextView android:id="@id/tts_time4" android:text="@string/tts_speech_time_60" style="@style/Style_Reader_TTS_Option" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingRight="@dimen/dp_8" android:layout_width="fill_parent" android:layout_height="@dimen/dp_72" android:layout_marginBottom="@dimen/dp_16">
        <Button android:textSize="@dimen/text_size_14" android:textColor="@color/bg_dark" android:gravity="center" android:id="@id/tts_exit" android:background="@drawable/tts_button_bg" android:paddingLeft="@dimen/dp_24" android:paddingRight="@dimen/dp_24" android:layout_width="144.0dip" android:layout_height="@dimen/dp_36" android:text="@string/tts_speech_exit" android:drawableLeft="@drawable/tts_voice_exit" />
    </LinearLayout>
</com.clilystudio.netbook.reader.ReaderTtsSetWidget>