<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/book_topic_popup_bg"
              android:orientation="vertical">

    <TextView
        android:id="@id/text_item0"
        style="@style/Post_List_PopupWindow_Item"
        android:text="@string/post_sort_update_default"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="?lineColor"/>

    <TextView
        android:id="@id/text_item1"
        style="@style/Post_List_PopupWindow_Item"
        android:text="@string/post_sort_create"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="?lineColor"/>

    <TextView
        android:id="@id/text_item2"
        style="@style/Post_List_PopupWindow_Item"
        android:text="@string/post_sort_useful"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="?lineColor"/>

    <TextView
        android:id="@id/text_item3"
        style="@style/Post_List_PopupWindow_Item"
        android:text="@string/post_sort_reply_count"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="?lineColor"/>
</LinearLayout>