<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="160.0dip"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/banner_share_remove_ad"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/share_remove_ad_title"
        android:textSize="@dimen/text_size_15"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/share_remove_ad_1"
        android:textSize="@dimen/text_size_12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/share_remove_ad_2"
        android:textSize="@dimen/text_size_12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/share_remove_ad_3"
        android:textSize="@dimen/text_size_12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/share_remove_ad_4"
        android:textSize="@dimen/text_size_12"/>

    <RelativeLayout
        android:id="@id/rl_share_button_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/common_btn_red_bg"
            android:text="@string/share_immediately"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"/>
    </RelativeLayout>
</LinearLayout>