<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
    >

    <ImageView
        android:id="@id/roundProgressBarBg"
        android:layout_width="160.0dip"
        android:layout_height="160.0dip"
        android:src="@drawable/rbg"/>

    <TextView
        android:id="@id/gameCenter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_center"
        android:textColor="#ff99cc99"
        android:textSize="20.0sp"/>

    <TextView
        android:id="@id/loading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="#ff99cc99"
        android:textSize="30.0sp"/>

    <TextView
        android:id="@id/copyRight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/copy_right"
        android:textColor="#ffcccc99"
        android:textSize="13.0sp"/>
</RelativeLayout>